--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -32,6 +32,7 @@ integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7
 <%} %>
 </ul>
 </div>
+<h1><%=good_job%></h1>
 </div>
 </body>
 <script>
